# ocaml-pari

./: .gitignore  .gitmodules  Makefile  README.md  default.nix  dune-project  flake.nix  index.html  pari-bindings.opam  pari-bindings.opam.template  pari.opam
examples/: dune  elliptic_curves.ml  knapsack_lll.ml  kzg.ml  number_fields.ml  pohlig-hellman.ipynb  pohlig_hellman.ml
pari_bindings/: dune  function_description.ml  pari_bindings.ml  pari_bindings.mli  type_description.ml
pari_bindings/libpari/: .gitignore  AUTHORS  CHANGES  CHANGES-2.12  CHANGES-2.14  COMPAT  Configure  LICENSE  NEW  README  TODO
pari_bindings/libpari/config/: DOC_Make.SH  GEN_Make.SH  Makefile.SH  TOP_Make.SH  arch-osname  convertllp64  cygwin-pari.nsi  get_cc  get_config_options  get_dlld  get_fltk  get_gmp  get_graphic_lib  get_kernel  get_libc  get_modld  get_perl  get_pretty  get_readline  get_tests  has_avx.c  has_dlopen.c  has_neon.c  has_rint.c  has_sse2.c  has_vsnprintf.c  mingw-pari.nsi  paricfg.h.SH  version
pari_bindings/libpari/doc/: .gitignore  INSTALL.tex  appd.tex  develop.tex  gp.1  gphelp.in  libpari.tex  parallel.tex  parimacro.tex  pdfmacs.tex  refcard-ell.tex  refcard-lfun.tex  refcard-mf.tex  refcard-nf.tex  refcard.tex  refmacro.tex  translations  tutorial-mf.tex  tutorial.tex  users.tex  usersFUNCS.tex  usersch1.tex  usersch2.tex  usersch4.tex  usersch5.tex  usersch6.tex  usersch7.tex  usersch8.tex
pari_bindings/libpari/examples/: .gitignore  EXPLAIN  contfrac.gp  minigp.c  openmp.c  pari-mt.c  pari.f90  parigp.sty  squfof.gp  thread.c
pari_bindings/libpari/misc/: .gitignore  README  color.dft  cook.c  mpigp
pari_bindings/libpari/src/: .gitignore
pari_bindings/libpari/src/basemath/: F2v.c  F2x.c  F2xqE.c  F3v.c  FF.c  Fle.c  Flv.c  Flx.c  FlxX.c  FlxqE.c  Flxq_log.c  FpE.c  FpV.c  FpX.c  FpXQX_factor.c  FpXX.c  FpX_factor.c  QX_factor.c  Qfb.c  RgV.c  RgX.c  Ser.c  ZG.c  ZV.c  ZX.c  Zp.c  alglin1.c  alglin2.c  alglin3.c  aprcl.c  arith1.c  arith2.c  base1.c  base2.c  base3.c  base4.c  base5.c  bb_group.c  bb_hnf.c  bern.c  (+73 more)
pari_bindings/libpari/src/desc/: .gitignore  deftune  doc_make  gen_proto
pari_bindings/libpari/src/desc/PARI/: 822.pm
pari_bindings/libpari/src/functions/algebras/: HEADER  algadd  algcharpoly  algdim  algdivl  algdivr  alghasse  alginit  alginv  algisdivl  algisinv  algmakeintegral  algmul  algmultable  algneg  algnorm  algpoleval  algpow  algrandom  algsplit  algsqr  algsub  algtomatrix  algtrace  algtype
pari_bindings/libpari/src/functions/combinatorics/: HEADER  bernfrac  bernpol  bernreal  bernvec  binomial  eulerfrac  eulerianpol  eulerpol  eulerreal  eulervec  fibonacci  hammingweight  harmonic  partitions  permcycles  permorder  permtonum  stirling
pari_bindings/libpari/src/functions/conversions/: HEADER  List  Map  Mod  Pol  Qfb  Str  Vecsmall  binary  bitand  bitor  bitprecision  bittest  centerlift  component  digits  exponent  fromdigits  imag  length  liftint  precision  random  real  round  valuation  variables
pari_bindings/libpari/src/functions/default/: TeXstyle  datadir  debug  debugfiles  debugmem  format  help  log  nbthreads  parisize  parisizemax  primelimit  realbitprecision  realprecision  threadsize  threadsizemax  timer
pari_bindings/libpari/src/functions/elliptic_curves/: HEADER  ell2cover  ellL1  ellan  ellanalyticrank  ellap  ellcard  elldivpol  elleisnum  ellformalw  ellfromeqn  ellfromj  ellgenerators  ellgroup  ellheegner  ellheight  ellheightmatrix  ellidentify  ellinit  elliscm  ellisdivisible  ellisogeny  ellisomat  ellissupersingular  elllog  ellminimalmodel  ellminimaltwist  ellnonsingularmultiple  ellorder  ellpadicbsd  ellpadiclambdamu  ellperiods  ellpointtoz  ellrank  ellrankinit  ellratpoints  ellsaturation  ellsea  ellsupersingularj  elltamagawa  (+19 more)
pari_bindings/libpari/src/functions/gp2c_internal/: _cast  _typedef
pari_bindings/libpari/src/functions/graphic/: HEADER  plot  plotexport  ploth  plothexport  plothraw  plothrawexport  plotlines  plotrecth  plotrecthraw  psploth
pari_bindings/libpari/src/functions/hypergeometric_motives/: HEADER  hgmalpha  hgmbydegree  hgmcoef  hgmcoefs  hgmcyclo  hgmeulerfactor  hgmgamma  hgminit  hgmissymmetrical  hgmparams  hgmtwist  lfunhgm
pari_bindings/libpari/src/functions/l_functions/: HEADER  lfunartin  lfuncheckfeq  lfunconductor  lfuncost  lfuncreate  lfundual  lfuneuler  lfungenus2  lfunhardy  lfuninit  lfunmfspec  lfunorderzero  lfunparams  lfunqf  lfunrootres  lfunshift  lfunsympow  lfunthetainit  lfuntwist  lfunzeros
pari_bindings/libpari/src/functions/linear_algebra/: HEADER  algdep  charpoly  concat  dirpowers  forqfvec  lindep  matadjoint  matcompanion  matdet  matdetint  mateigen  mathnf  mathnfmod  mathouseholder  matindexrank  matintersect  matker  matkerint  matreduce  matrixqz  matsnf  matsolve  matsolvemod  minpoly  powers  qfauto  qfeval  qflll  qfminim  qfminimize  qforbits  qfparam  qfperfection  qfsolve  setdelta  setsearch  snfrank  trace  vecextract  (+3 more)
pari_bindings/libpari/src/functions/operators/: HEADER  (+1 more)
pari_bindings/libpari/src/gp/: .gitignore  emacs.c  gp.c  gp.h  gp_rl.c  texmacs.c  whatnow.c  whatnow.h
pari_bindings/libpari/src/graph/: plotWin32.c  plotX.c  plotfltk.c  plotnone.c  plotport.c  plotps.c  plottty.c  rect.h
pari_bindings/libpari/src/headers/: paricom.h  paridecl.h  parigen.h  pariinl.h  parinf.h  pariold.h  paripriv.h  paristio.h  paritune.h
pari_bindings/libpari/src/language/: .gitignore  anal.c  anal.h  compile.c  default.c  es.c  eval.c  forprime.c  gplib.c  hash.c  init.c  intnum.c  members.c  opcode.h  paricfg.c  pariinl.c  parse.y  parsec.h  readline.c  str.c  sumiter.c  tree.h
pari_bindings/libpari/src/modules/: algebras.c  elldata.c  ellfromeqn.c  forperm.c  forsubset.c  galois.c  galpol.c  genus2red.c  groupid.c  krasner.c  mpqs.c  mpqs.h  part.c  ratpoints.c  stark.c  thue.c
pari_bindings/libpari/src/mt/: mpi.c  mt.c  mt.h  pthread.c  pthread.h  single.c
pari_bindings/libpari/src/test/: dotest  tune.c
src/: dune  function_description.ml  pari.ml  pari.mli  prelude  type_description.ml
(+917 files in other folders)
