(data_only_dirs libpari)

(include_subdirs unqualified)

(rule
 (deps
  (source_tree libpari))
 ; keep adding targets!
 (targets
  libpari.a
  dllpari.so
  paricfg.h
  parimt.h
  mpinl.h
  parinf.h
  paristio.h)
 (action
  (no-infer
   (progn
    (chdir
     libpari
     (run mkdir local))
    (chdir
     libpari
     (system
      "if [ \"$(uname)\" = \"Darwin\" ]; then CC=$(find /usr/local/bin -name \"gcc-[0-9]*\" 2>&1 | head -n 1) ./Configure --prefix=local --with-gmp-lib=/opt/homebrew/lib --with-gmp-include=/opt/homebrew/include; elif [ \"$(uname)\" = \"FreeBSD\" ]; then ./Configure --prefix=local --with-gmp-lib=/usr/local/lib --with-gmp-include=/usr/local/include; else ./Configure --prefix=local; fi;"))
    (ignore-stderr
     (with-accepted-exit-codes
      (or 0 1)
      (chdir
       libpari
       (run make gp))))
    (ignore-stderr
     (with-accepted-exit-codes
      (or 0 1)
      (chdir
       libpari
       (run make install-lib-sta))))
    (copy libpari/local/lib/libpari.a libpari.a)
    (copy libpari/src/headers/parinf.h parinf.h)
    (copy libpari/src/headers/paristio.h paristio.h)
    (system "find . -type d -regex '.*O[linux|darwin|freebsd].*' > target")
    ; linux
    (ignore-stderr
     (with-accepted-exit-codes
      (or 0 1)
      (system "cp $(cat target)/libpari.so dllpari.so")))
    ; i-shiny objects
    (ignore-stderr
     (with-accepted-exit-codes
      (or 0 1)
      (system "cp $(cat target)/libpari.dylib dllpari.so")))
    (system "cp $(cat target)/paricfg.h paricfg.h")
    (system "cp $(cat target)/parimt.h parimt.h")
    (system "cp $(cat target)/mpinl.h mpinl.h")))))

(library
 (name Pari_bindings)
 (public_name pari-bindings)
 (libraries core ctypes.stubs ctypes.foreign ctypes integers)
 (foreign_archives pari)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 (flags
  (:standard -w -9-11-27-32))
 (c_library_flags
  (:standard -fPIC -L/opt/homebrew/lib -L/usr/local/lib -lgmp))
 (ctypes
  (external_library_name libpari)
  (build_flags_resolver
   (vendored
    (c_flags
     (:standard -Ofast -finline-functions -ffast-math -funroll-all-loops)
     (-I./pari_bindings/libpari/src/headers)
     (-I../pari_bindings/libpari/src/headers)
     (-I./_build/default/pari_bindings)
     (-I../../../_build/default/pari_bindings)
     (-I../../_build/default/pari_bindings))
    (c_library_flags :standard -fPIC -lpari)))
  (headers
   (include "pari.h"))
  (type_description
   (instance Type)
   (functor Type_description))
  (function_description
   (concurrency unlocked)
   (instance Function)
   (functor Function_description))
  (generated_types Types_generated)
  (generated_entry_point C)))
