(data_only_dirs libpari)

(include_subdirs unqualified)

(mdx
 (files :standard - *.mli)
 (libraries pari pari-bindings core integers ctypes ctypes.foreign mdx)
 (preludes prelude))

(library
 (name Pari)
 (public_name pari)
 (libraries core ctypes.stubs ctypes.foreign ctypes integers pari-bindings))
